--- a/src/index.html
+++ b/src/index.html
@@ -64,16 +64,19 @@
               + Add
             </button>
           </div>
-          <div class="batch-cards grid grid-flow-col">
+
+          <div class="batch-cards grid grid-cols-3 gap-3 justify-center">
             <div
-              class="batch-card bg-white text-indigo-500 p-4 rounded shadow flex flex-col items-center gap-1 h-50 w-60 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300 border-2 border-indigo-50/80"
+              class="batch-card bg-white text-indigo-500 p-4 rounded shadow flex flex-col items-center gap-1 h-55 w-70 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300 border-2 border-indigo-50/80"
             >
-              <h2 class="batch-title text-2xl font-bold uppercase">
+              <h2 class="batch-title text-3xl font-bold uppercase">
                 14th Batch
               </h2>
               <div class="semesters flex flex-col">
-                <p class="text-center text-xl">Semester</p>
-                <div class="flex gap-4 text-lg py-2 flex-wrap order-4">
+                <p class="text-center text-2xl">Semester</p>
+                <div
+                  class="flex justify-center items-center gap-1 text-lg py-2 flex-wrap"
+                >
                   <a
                     href="#"
                     class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
@@ -104,6 +107,11 @@
                     class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
                     >6</a
                   >
+                  <a
+                    href="#"
+                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
+                    >7</a
+                  >
 
                   <a
                     href="#"
@@ -112,19 +120,25 @@
                   >
                 </div>
               </div>
-              <a href="#" class="students text-xl font-semibold">Students</a>
-              <h2 class="course">Course: 5</h2>
+              <a
+                href="#"
+                class="students text-lg font-semibold bg-indigo-50 px-3 border rounded-full border-indigo-500 hover:bg-indigo-200 duration-200"
+                >Students</a
+              >
+              <h2 class="course text-lg font-medium">Course: 5</h2>
             </div>
 
             <div
-              class="batch-card bg-white text-indigo-500 p-4 rounded shadow flex flex-col items-center gap-1 h-50 w-60 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300 border-2 border-indigo-50/80"
+              class="batch-card bg-white text-indigo-500 p-4 rounded shadow flex flex-col items-center gap-1 h-55 w-70 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300 border-2 border-indigo-50/80"
             >
-              <h2 class="batch-title text-2xl font-bold uppercase">
+              <h2 class="batch-title text-3xl font-bold uppercase">
                 14th Batch
               </h2>
               <div class="semesters flex flex-col">
-                <p class="text-center text-xl">Semester</p>
-                <div class="flex gap-4 text-lg py-2">
+                <p class="text-center text-2xl">Semester</p>
+                <div
+                  class="flex justify-center items-center gap-1 text-lg py-2 flex-wrap"
+                >
                   <a
                     href="#"
                     class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
@@ -140,21 +154,53 @@
                     class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
                     >3</a
                   >
+                  <a
+                    href="#"
+                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
+                    >4</a
+                  >
+                  <a
+                    href="#"
+                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
+                    >5</a
+                  >
+                  <a
+                    href="#"
+                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
+                    >6</a
+                  >
+                  <a
+                    href="#"
+                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
+                    >7</a
+                  >
+
+                  <a
+                    href="#"
+                    class="semester bg-indigo-50 border font-2xl border-indigo-500 text-indigo-500 rounded-full h-8 w-8 text-center hover:bg-indigo-600 hover:text-indigo-50 duration-100"
+                    >+</a
+                  >
                 </div>
               </div>
-              <a href="#" class="students text-xl font-semibold">Students</a>
-              <h2 class="course">Course: 5</h2>
+              <a
+                href="#"
+                class="students text-lg font-semibold bg-indigo-50 px-3 border rounded-full border-indigo-500 hover:bg-indigo-200 duration-200"
+                >Students</a
+              >
+              <h2 class="course text-lg font-medium">Course: 5</h2>
             </div>
 
             <div
-              class="batch-card bg-white text-indigo-500 p-4 rounded shadow flex flex-col items-center gap-1 h-50 w-60 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300 border-2 border-indigo-50/80"
+              class="batch-card bg-white text-indigo-500 p-4 rounded shadow flex flex-col items-center gap-1 h-55 w-70 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300 border-2 border-indigo-50/80"
             >
-              <h2 class="batch-title text-2xl font-bold uppercase">
+              <h2 class="batch-title text-3xl font-bold uppercase">
                 14th Batch
               </h2>
               <div class="semesters flex flex-col">
-                <p class="text-center text-xl">Semester</p>
-                <div class="flex gap-4 text-lg py-2">
+                <p class="text-center text-2xl">Semester</p>
+                <div
+                  class="flex justify-center items-center gap-1 text-lg py-2 flex-wrap"
+                >
                   <a
                     href="#"
                     class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
@@ -170,21 +216,53 @@
                     class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
                     >3</a
                   >
+                  <a
+                    href="#"
+                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
+                    >4</a
+                  >
+                  <a
+                    href="#"
+                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
+                    >5</a
+                  >
+                  <a
+                    href="#"
+                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
+                    >6</a
+                  >
+                  <a
+                    href="#"
+                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
+                    >7</a
+                  >
+
+                  <a
+                    href="#"
+                    class="semester bg-indigo-50 border font-2xl border-indigo-500 text-indigo-500 rounded-full h-8 w-8 text-center hover:bg-indigo-600 hover:text-indigo-50 duration-100"
+                    >+</a
+                  >
                 </div>
               </div>
-              <a href="#" class="students text-xl font-semibold">Students</a>
-              <h2 class="course">Course: 5</h2>
+              <a
+                href="#"
+                class="students text-lg font-semibold bg-indigo-50 px-3 border rounded-full border-indigo-500 hover:bg-indigo-200 duration-200"
+                >Students</a
+              >
+              <h2 class="course text-lg font-medium">Course: 5</h2>
             </div>
 
             <div
-              class="batch-card bg-white text-indigo-500 p-4 rounded shadow flex flex-col items-center gap-1 h-50 w-60 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300 border-2 border-indigo-50/80"
+              class="batch-card bg-white text-indigo-500 p-4 rounded shadow flex flex-col items-center gap-1 h-55 w-70 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300 border-2 border-indigo-50/80"
             >
-              <h2 class="batch-title text-2xl font-bold uppercase">
+              <h2 class="batch-title text-3xl font-bold uppercase">
                 14th Batch
               </h2>
               <div class="semesters flex flex-col">
-                <p class="text-center text-xl">Semester</p>
-                <div class="flex gap-4 text-lg py-2">
+                <p class="text-center text-2xl">Semester</p>
+                <div
+                  class="flex justify-center items-center gap-1 text-lg py-2 flex-wrap"
+                >
                   <a
                     href="#"
                     class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
@@ -200,10 +278,40 @@
                     class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
                     >3</a
                   >
+                  <a
+                    href="#"
+                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
+                    >4</a
+                  >
+                  <a
+                    href="#"
+                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
+                    >5</a
+                  >
+                  <a
+                    href="#"
+                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
+                    >6</a
+                  >
+                  <a
+                    href="#"
+                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
+                    >7</a
+                  >
+
+                  <a
+                    href="#"
+                    class="semester bg-indigo-50 border font-2xl border-indigo-500 text-indigo-500 rounded-full h-8 w-8 text-center hover:bg-indigo-600 hover:text-indigo-50 duration-100"
+                    >+</a
+                  >
                 </div>
               </div>
-              <a href="#" class="students text-xl font-semibold">Students</a>
-              <h2 class="course">Course: 5</h2>
+              <a
+                href="#"
+                class="students text-lg font-semibold bg-indigo-50 px-3 border rounded-full border-indigo-500 hover:bg-indigo-200 duration-200"
+                >Students</a
+              >
+              <h2 class="course text-lg font-medium">Course: 5</h2>
             </div>
           </div>
         </div>
