right section init

--- a/src/index.html
+++ b/src/index.html
@@ -52,9 +52,9 @@
 
     <!-- main body -->
     <main class="main mt-5 container mx-auto">
-      <div class="my-10 grid grid-cols-3 gap-10 bg-gray-500">
-        <div class="left-batchs col-span-2 bg-gray-200 p-3">
-          <div class="batch-top grid py-3 pr-3">
+      <div class="my-10 grid grid-cols-3 gap-3">
+        <div class="left-batchs col-span-2 bg-gray-200 rounded p-3">
+          <div class="batch-top grid pb-3">
             <h2 class="text-center text-xl font-bold text-indigo-500">
               All Batches
             </h2>
@@ -127,195 +127,25 @@
               >
               <h2 class="course text-lg font-medium">Course: 5</h2>
             </div>
-
-            <div
-              class="batch-card bg-white text-indigo-500 p-4 rounded shadow flex flex-col items-center gap-1 h-55 w-70 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300 border-2 border-indigo-50/80"
-            >
-              <h2 class="batch-title text-3xl font-bold uppercase">
-                14th Batch
-              </h2>
-              <div class="semesters flex flex-col">
-                <p class="text-center text-2xl">Semester</p>
-                <div
-                  class="flex justify-center items-center gap-1 text-lg py-2 flex-wrap"
-                >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >1</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >2</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >3</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >4</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >5</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >6</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >7</a
-                  >
-
-                  <a
-                    href="#"
-                    class="semester bg-indigo-50 border font-2xl border-indigo-500 text-indigo-500 rounded-full h-8 w-8 text-center hover:bg-indigo-600 hover:text-indigo-50 duration-100"
-                    >+</a
-                  >
-                </div>
-              </div>
-              <a
-                href="#"
-                class="students text-lg font-semibold bg-indigo-50 px-3 border rounded-full border-indigo-500 hover:bg-indigo-200 duration-200"
-                >Students</a
-              >
-              <h2 class="course text-lg font-medium">Course: 5</h2>
-            </div>
-
-            <div
-              class="batch-card bg-white text-indigo-500 p-4 rounded shadow flex flex-col items-center gap-1 h-55 w-70 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300 border-2 border-indigo-50/80"
-            >
-              <h2 class="batch-title text-3xl font-bold uppercase">
-                14th Batch
-              </h2>
-              <div class="semesters flex flex-col">
-                <p class="text-center text-2xl">Semester</p>
-                <div
-                  class="flex justify-center items-center gap-1 text-lg py-2 flex-wrap"
-                >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >1</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >2</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >3</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >4</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >5</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >6</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >7</a
-                  >
-
-                  <a
-                    href="#"
-                    class="semester bg-indigo-50 border font-2xl border-indigo-500 text-indigo-500 rounded-full h-8 w-8 text-center hover:bg-indigo-600 hover:text-indigo-50 duration-100"
-                    >+</a
-                  >
-                </div>
-              </div>
-              <a
-                href="#"
-                class="students text-lg font-semibold bg-indigo-50 px-3 border rounded-full border-indigo-500 hover:bg-indigo-200 duration-200"
-                >Students</a
-              >
-              <h2 class="course text-lg font-medium">Course: 5</h2>
-            </div>
-
-            <div
-              class="batch-card bg-white text-indigo-500 p-4 rounded shadow flex flex-col items-center gap-1 h-55 w-70 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300 border-2 border-indigo-50/80"
-            >
-              <h2 class="batch-title text-3xl font-bold uppercase">
-                14th Batch
-              </h2>
-              <div class="semesters flex flex-col">
-                <p class="text-center text-2xl">Semester</p>
-                <div
-                  class="flex justify-center items-center gap-1 text-lg py-2 flex-wrap"
-                >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >1</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >2</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >3</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >4</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >5</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >6</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >7</a
-                  >
-
-                  <a
-                    href="#"
-                    class="semester bg-indigo-50 border font-2xl border-indigo-500 text-indigo-500 rounded-full h-8 w-8 text-center hover:bg-indigo-600 hover:text-indigo-50 duration-100"
-                    >+</a
-                  >
-                </div>
-              </div>
-              <a
-                href="#"
-                class="students text-lg font-semibold bg-indigo-50 px-3 border rounded-full border-indigo-500 hover:bg-indigo-200 duration-200"
-                >Students</a
-              >
-              <h2 class="course text-lg font-medium">Course: 5</h2>
-            </div>
           </div>
         </div>
-        <div class="right bg-gray-400"></div>
+        <div class="right bg-gray-200 grid p-3 rounded">
+          <div class="right-title">
+            <h2 class="text-center text-xl font-bold text-indigo-500">
+              Generate Grade Sheet
+            </h2>
+          </div>
+          <div
+            class="right-upper flex flex-col justify-center items-center gap-3"
+          >
+            <h2>Input reg number</h2>
+            <form action="">
+              <input type="text" class="outline-none" />
+            </form>
+            <button>submit</button>
+          </div>
+          <div class="right-lower"></div>
+        </div>
       </div>
     </main>
   </body>
