fix some layout

--- a/src/index.html
+++ b/src/index.html
@@ -120,12 +120,19 @@
                   >
                 </div>
               </div>
-              <a
-                href="#"
-                class="students text-lg font-semibold bg-indigo-50 px-3 border rounded-full border-indigo-500 hover:bg-indigo-200 duration-200"
-                >Students</a
-              >
-              <h2 class="course text-lg font-medium">Course: 5</h2>
+              <div class="flex justify-between items-center py-3 w-full">
+                <a
+                  href="#"
+                  class="students text-lg font-semibold bg-indigo-50 px-3 border rounded-full border-indigo-500 hover:bg-indigo-200 duration-200"
+                  >Students</a
+                >
+                <h2 class="course text-lg font-medium">Course: 5</h2>
+                <button
+                  class="bg-indigo-50 border rounded-full px-2 hover:border-indigo-300"
+                >
+                  Delete
+                </button>
+              </div>
             </div>
           </div>
         </div>
@@ -184,53 +191,15 @@
                   >
                     Courses:
                   </p>
-                  <p class="font-medium text-gray-600">CSE-101 (2018-19)</p>
-                  <p class="font-medium text-gray-600">CSE-101 (2018-19)</p>
-                  <p class="font-medium text-gray-600">CSE-101 (2018-19)</p>
-                </div>
-              </div>
-              <div
-                class="teacher flex justify-between items-center bg-gray-100 p-3 mt-3 shadow rounded border-2 border-indigo-50/80 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300"
-              >
-                <div class="title flex flex-col">
-                  <p class="font-semibold text-xl text-indigo-500">
-                    Nayan Kumar Nath
+                  <p class="text-sm font-normal text-gray-600">
+                    CSE-101 (2018-19)
                   </p>
-                  <p class="italic font-medium text-gray-500">
-                    Lecturer, CSE, SEC
+                  <p class="text-sm font-normal text-gray-600">
+                    CSE-101 (2018-19)
                   </p>
-                </div>
-                <div class="course flex flex-col">
-                  <p
-                    class="font-semibold text-xl bg-indigo-100 rounded border text-center text-indigo-500"
-                  >
-                    Courses:
+                  <p class="text-sm font-normal text-gray-600">
+                    CSE-101 (2018-19)
                   </p>
-                  <p class="font-medium text-gray-600">CSE-101 (2018-19)</p>
-                  <p class="font-medium text-gray-600">CSE-101 (2018-19)</p>
-                  <p class="font-medium text-gray-600">CSE-101 (2018-19)</p>
-                </div>
-              </div>
-              <div
-                class="teacher flex justify-between items-center bg-gray-100 p-3 mt-3 shadow rounded border-2 border-indigo-50/80 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300"
-              >
-                <div class="title flex flex-col">
-                  <p class="font-semibold text-xl text-indigo-500">
-                    Nayan Kumar Nath
-                  </p>
-                  <p class="italic font-medium text-gray-500">
-                    Lecturer, CSE, SEC
-                  </p>
-                </div>
-                <div class="course flex flex-col">
-                  <p
-                    class="font-semibold text-xl bg-indigo-100 rounded border text-center text-indigo-500"
-                  >
-                    Courses:
-                  </p>
-                  <p class="font-medium text-gray-600">CSE-101 (2018-19)</p>
-                  <p class="font-medium text-gray-600">CSE-101 (2018-19)</p>
-                  <p class="font-medium text-gray-600">CSE-101 (2018-19)</p>
                 </div>
               </div>
             </div>
