--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
 
           <div class="batch-cards grid grid-cols-3 gap-3 justify-center">
             <div
-              class="batch-card bg-white text-indigo-500 p-4 rounded shadow flex flex-col items-center gap-1 h-55 w-70 border-2 border-indigo-50/80 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300"
+              class="batch-card bg-white text-indigo-500 p-4 rounded shadow flex flex-col items-center gap-1 h-55 w-80 border-2 border-indigo-50/80 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300"
             >
               <h2 class="batch-title text-3xl font-bold uppercase">
                 14th Batch
@@ -78,7 +78,7 @@
                   class="flex justify-center items-center gap-1 text-lg py-2 flex-wrap"
                 >
                   <a
-                    href="#"
+                    href="./pages/semester.html"
                     class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
                     >1</a
                   >
