--- a/src/pages/semester.html
+++ b/src/pages/semester.html
@@ -4,16 +4,19 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="semester.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Semester</title>
   </head>
   <body>
-    <div class="container mx-auto py-3">
+    <div class="container mx-auto pb-3">
       <div class="title flex flex-col justify-center items-center bg-indigo-500 py-5 rounded">
         <h1 class="text-4xl font-bold text-indigo-50">Batch 14th</h1>
         <p class="text-xl text-indigo-50 font-semibold">Semester : 1</p>
       </div>
+
       <div class="courses flex flex-col">
+
         <div class="courses-head flex justify-between py-3">
           <h2 class="text-2xl font-semibold text-indigo-500">Cources</h2>
           <button
@@ -22,7 +25,9 @@
               + Add
             </button>
         </div>
+
         <div class="courses-card flex gap-10  flex-wrap bg-gray-100 p-3 rounded ">
+
           <div
             class="course-card bg-white text-indigo-500 p-4 rounded shadow flex flex-col gap-5 items-center h-55 w-80 border-2 border-indigo-50/80 hover:shadow-lg hover:border-indigo-500 hover:border-2 duration-300"
           >
@@ -35,17 +40,22 @@
             <div class="creadit-teacher flex text-gray-700 font-medium ">
               <p><span class="font-bold text-indigo-500">Teacher:</span> Noyon Kumar Nath</p>
             </div>
-            <div class="flex justify-between items-center py-3 w-full">
-              <a
-                href="#"
-                class="students text-lg font-semibold bg-indigo-50 px-3 border rounded-full border-indigo-500 hover:bg-indigo-200 duration-200"
-                >Students</a
-              >
-              <h2 class="course text-lg font-medium">Course: 5</h2>
+            <div class="flex gap-12 justify-center items-center py-3 w-full">
+              
               <button
                 class="bg-indigo-50 border rounded-full px-2 hover:border-indigo-300"
               >
                 Delete
+              </button>
+              <button
+                class="bg-indigo-50 border rounded-full px-2 hover:border-indigo-300"
+              >
+                Edit
+              </button>
+              <button
+                class="bg-indigo-50 border rounded-full px-2 hover:border-indigo-300"
+              >
+                View
               </button>
             </div>
           </div>
@@ -55,6 +65,102 @@
         </div>
         </div>
       </div>
+
+      <div class="tabulation-sheet container mx-auto">
+        <table class="content-table">
+        <tr>
+          <th colspan="6" rowspan="2"></th>
+          <th colspan="2">CSE-201 </th>
+          <th colspan="2">CSE-201</th>
+          <th colspan="2">CSE-201</th>
+          <th colspan="2">CSE-201</th>
+          <th colspan="2">CSE-201</th>
+          <th colspan="2">CSE-201</th>
+          <th colspan="2">CSE-201</th>
+          <th colspan="2">CSE-201</th>
+          <th colspan="2">CSE-201</th>
+          <th colspan="3">2nd Semester</th>
+          <th colspan="3">3rd Semester</th>
+        </tr>
+
+        <tr>
+          
+          <th colspan="2">3.00</th>
+          <th colspan="2">1.50</th>
+          <th colspan="2">3.00</th>
+          <th colspan="2">1.50</th>
+          <th colspan="2">3.00</th>
+          <th colspan="2">1.50</th>
+          <th colspan="2">3.00</th>
+          <th colspan="2">1.50</th>
+          <th colspan="2">2.00</th>
+          <th colspan="3">2nd Semester</th>
+          <th colspan="3">3rd Semester</th>
+        </tr>
+
+        <tr>
+          <th>SL</th>
+          <th colspan="2">Reg.</th>
+          <th colspan="3">Name</th>
+          <td>GP</td>
+          <td>LG</td>
+          <td>GP</td>
+          <td>LG</td>
+          <td>GP</td>
+          <td>LG</td>
+          <td>GP</td>
+          <td>LG</td>
+          <td>GP</td>
+          <td>LG</td>
+          <td>GP</td>
+          <td>LG</td>
+          <td>GP</td>
+          <td>LG</td>
+          <td>GP</td>
+          <td>LG</td>
+          <td>GP</td>
+          <td>LG</td>
+          <td>Credit</td>
+          <td>GPA</td>
+          <td>LG</td>
+          <td>Credit</td>
+          <td>GPA</td>
+          <td>LG</td>
+        </tr>
+
+        <tr>
+          <td>01</td>
+          <td colspan="2">2018331</td>
+          <td colspan="3">Dip Singha</td>
+          <td>77</td>
+          <td>55</td>
+          <td>44</td>
+          <td>56</td>
+          <td>67</td>
+          <td>89</td>
+          <td>89</td>
+          <td>77</td>
+          <td>44</td>
+          <td>55</td>
+          <td>89</td>
+          <td>56</td>
+          <td>77</td>
+          <td>44</td>
+          <td>89</td>
+          <td>77</td>
+          <td>56</td>
+          <td>77</td>
+          <td>one</td>
+          <td>one</td>
+          <td>one</td>
+          <td>one</td>
+          <td>one</td>
+          <td>one</td> 
+        </tr>
+
+      </table>
+      </div>
+
     </div>
   </body>
 </html>
