--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <header class="bg-gradient-to-r from-indigo-500 to-indigo-600 bg-black">
       <!-- navbar  -->
       <nav class="navbar container mx-auto px-5 text-indigo-50 bg-amber-300-50">
-        <div class="grid grid-cols-3">
+        <div class="grid grid-cols-3 pt-5">
           <!-- logo/ title  -->
           <div class="left">
             <h1 class="logo font-semibold uppercase text-2xl">logo</h1>
@@ -26,9 +26,16 @@
           </div>
 
           <div class="right ml-auto flex gap-4">
-            <div class="username">welcome username!</div>
-            <span>|</span>
-            <div class="login"><a href="./pages/login.html"> signout </a></div>
+            <p class="username">welcome username!</p>
+            <span class="opacity-30">|</span>
+            <div class="sign-out">
+              <a
+                class="hover:text-teal-300 duration-200"
+                href="./pages/login.html"
+              >
+                signout
+              </a>
+            </div>
           </div>
         </div>
       </nav>
@@ -83,34 +90,9 @@
                     >1</a
                   >
                   <a
-                    href="#"
+                    href="./pages/semester.html"
                     class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
                     >2</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >3</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >4</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >5</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >6</a
-                  >
-                  <a
-                    href="#"
-                    class="semester bg-indigo-500 text-indigo-50 rounded-full h-8 w-8 text-center hover:bg-indigo-400 duration-100"
-                    >7</a
                   >
 
                   <a
