--- a/src/pages/semester.html
+++ b/src/pages/semester.html
@@ -7,6 +7,22 @@
     <link rel="stylesheet" href="semester.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <title>Semester</title>
+
+    <style>
+      .content-table {
+  border-collapse: collapse;
+  min-width: 1535px;
+}
+table,
+tr,
+th,
+td {
+  border: 1px solid gray;
+  text-align: center;
+}
+
+    </style>
+
   </head>
   <body>
 
@@ -14,7 +30,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="/dist/output.css" rel="stylesheet" />
     <title>Result managemant</title>
   </head>
   <body class="bg-gray-100 overflow-hidden">
