--- a/src/index.html
+++ b/src/index.html
@@ -57,6 +57,91 @@
       </div> -->
     </header>
 
+    <!-- modal -->
+    <!-- Code block starts -->
+    <dh-component>
+      <div
+        class="py-60 bg-gray-700/80 transition duration-300 ease-in-out z-10 absolute top-0 right-0 bottom-0 left-0"
+        id="modal"
+      >
+        <div role="alert" class="container mx-auto w-11/12 md:w-2/3 max-w-lg">
+          <div
+            class="relative py-8 px-5 md:px-10 bg-white shadow-md rounded border border-gray-400"
+          >
+            <label
+              for="name"
+              class="text-gray-800 text-sm font-bold leading-tight tracking-normal"
+              >Batch</label
+            >
+            <input
+              id="name"
+              class="mb-5 mt-2 text-gray-600 focus:outline-none focus:border focus:border-indigo-700 font-normal w-full h-10 flex items-center pl-3 text-sm border-gray-300 rounded border"
+              placeholder="Type batch name"
+            />
+            <label
+              for="name"
+              class="text-gray-800 text-sm font-bold leading-tight tracking-normal"
+              >Semester</label
+            >
+            <input
+              id="name"
+              class="mb-5 mt-2 text-gray-600 focus:outline-none focus:border focus:border-indigo-700 font-normal w-full h-10 flex items-center pl-3 text-sm border-gray-300 rounded border"
+              placeholder="Type semester"
+            />
+            <label
+              for="name"
+              class="text-gray-800 text-sm font-bold leading-tight tracking-normal"
+              >Cources</label
+            >
+            <input
+              id="name"
+              class="mb-5 mt-2 text-gray-600 focus:outline-none focus:border focus:border-indigo-700 font-normal w-full h-10 flex items-center pl-3 text-sm border-gray-300 rounded border"
+              placeholder="Type total cources"
+            />
+
+            <div class="flex items-center justify-start w-full">
+              <button
+                class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-700 transition duration-150 ease-in-out hover:bg-indigo-600 bg-indigo-700 rounded text-white px-8 py-2 text-sm"
+              >
+                Create
+              </button>
+              <button
+                class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-400 ml-3 bg-gray-100 transition duration-150 text-gray-600 ease-in-out hover:border-gray-400 hover:bg-gray-300 border rounded px-8 py-2 text-sm"
+                onclick="modalHandler()"
+              >
+                Cancel
+              </button>
+            </div>
+            <button
+              class="cursor-pointer absolute top-0 right-0 mt-4 mr-5 text-gray-400 hover:text-gray-600 transition duration-150 ease-in-out rounded focus:ring-2 focus:outline-none focus:ring-gray-600"
+              onclick="modalHandler()"
+              aria-label="close modal"
+              role="button"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="icon icon-tabler icon-tabler-x"
+                width="20"
+                height="20"
+                viewBox="0 0 24 24"
+                stroke-width="2.5"
+                stroke="currentColor"
+                fill="none"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+              >
+                <path stroke="none" d="M0 0h24v24H0z" />
+                <line x1="18" y1="6" x2="6" y2="18" />
+                <line x1="6" y1="6" x2="18" y2="18" />
+              </svg>
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="w-full flex justify-center py-12" id="button"></div>
+    </dh-component>
+    <!-- Code block ends -->
+
     <!-- main body -->
     <main class="main mt-5 container mx-auto">
       <div class="my-10 grid grid-cols-3 gap-3">
@@ -67,6 +152,7 @@
             </h2>
             <button
               class="add-btn ml-auto bg-indigo-500 text-indigo-50 px-4 py-1 rounded hover:bg-indigo-600 duration-200"
+              onclick="modalHandler(true)"
             >
               + Add
             </button>
@@ -189,5 +275,37 @@
         </div>
       </div>
     </main>
+
+    <script>
+      let modal = document.getElementById("modal");
+      function modalHandler(val) {
+        if (val) {
+          fadeIn(modal);
+        } else {
+          fadeOut(modal);
+        }
+      }
+      function fadeOut(el) {
+        el.style.opacity = 1;
+        (function fade() {
+          if ((el.style.opacity -= 0.1) < 0) {
+            el.style.display = "none";
+          } else {
+            requestAnimationFrame(fade);
+          }
+        })();
+      }
+      function fadeIn(el, display) {
+        el.style.opacity = 0;
+        el.style.display = display || "flex";
+        (function fade() {
+          let val = parseFloat(el.style.opacity);
+          if (!((val += 0.2) > 1)) {
+            el.style.opacity = val;
+            requestAnimationFrame(fade);
+          }
+        })();
+      }
+    </script>
   </body>
 </html>
