student view page added

--- a/src/pages/student.html
+++ b/src/pages/student.html
@@ -62,40 +62,18 @@ td {
 
     <div class="container mx-auto">
       <div
-        class="info flex justify-between p-3 pl-10 pr-10 items-center bg-gray-200 my-5 rounded"
+        class="info text-center p-3 items-center bg-gray-200 my-5 rounded"
       >
-        <div class="info-left flex flex-col gap-2 items-start">
+        <div class="info-text-center items-start">
           <h3 class="text-4xl font-bold text-indigo-500">CSE 12(2018-19)</h3>
           <h3 class="text-xl font-medium text-gray-500">Semester: 1st</h3>
-        </div>
-        <div class="info-right flex flex-col gap-2 text-gray-600 font-medium">
-          <p class="font-normal text-lg">
-            <span class="text-indigo-500 font-semibold">Course Title:</span>
-            Object Oriented Programing
-          </p>
-          <p class="font-normal text-lg">
-            <span class="text-indigo-500 font-semibold">Course Code:</span>
-            CSE 401
-          </p>
-          <p class="font-normal text-lg">
-            <span class="text-indigo-500 font-semibold">Credits:</span>
-            3.0
-          </p>
-          <p class="font-normal text-lg">
-            <span class="text-indigo-500 font-semibold">Course Type:</span>
-            Theory
-          </p>
-          <p class="font-normal text-lg">
-            <span class="text-indigo-500 font-semibold">Course Teacher:</span>
-            Noyon Kumar Nath
-          </p>
         </div>
       </div>
 
 
  <div class="tabulation-sheet container mx-auto">
         <div class="courses-head flex justify-between py-3">
-          <h2 class="text-2xl font-bold text-indigo-500">Results</h2>
+          <h2 class="text-2xl font-bold text-indigo-500">Student Informations</h2>
 
           <div class="btns flex gap-3">
             <div class="upload-btn">
@@ -116,31 +94,28 @@ td {
       <table class="content-table py-3">
         <tr>
           <th>SL</th>
-          <th colspan="2">Reg.</th>
-          <th colspan="3">Name</th>
-          <th>Part A Decode</th>
-          <th>Part A Marks</th>
-          <th>Part B Decode</th>
-          <th>Part B Marks</th>
-          <th>Assignment Marks</th>
-          <th>Total Marks</th>
-          <th>GP</th>
-          <th>LG</th>
+          <th>Reg.</th>
+          <th>Name</th>
+          <th>Father's Name</th>
+          <th>Mother's Name</th>
+          <th>Address</th>
+          <th>Phone</th>
+          <th>Average cgpa</th>
+          <th>Remarks</th>
           <th>Activity</th>
+          
         </tr>
 
         <tr>
           <td>01</td>
-          <td colspan="2">2018331562</td>
-          <td colspan="3">Dip Singha</td>
-          <td>77</td>
-          <td>55</td>
-          <td>44</td>
-          <td>56</td>
-          <td>67</td>
-          <td>89</td>
-          <td>89</td>
-          <td>77</td>
+          <td>2018331562</td>
+          <td >Dip Singha with big name</td>
+          <td>Ramendro kumar singha</td>
+          <td>Anjoli rani sinha</td>
+          <td>Bornomala point, Bagbari Sylhet</td>
+          <td>01720166868</td>
+          <td>3.50</td>
+          <td>00</td>
           <td>
               <div class="button flex gap-3 items-center justify-center text-xl"> 
                 <button class="edit hover:text-indigo-500 duration-200" ><ion-icon name="create-outline"></ion-icon>
@@ -151,30 +126,6 @@ td {
           </td>
         </tr>
 
-
-        <tr>
-          <td>01</td>
-          <td colspan="2">2018331563</td>
-          <td colspan="3">Ashraful Ahmed</td>
-          <td>77</td>
-          <td>55</td>
-          <td>44</td>
-          <td>56</td>
-          <td>67</td>
-          <td>89</td>
-          <td>89</td>
-          <td>77</td>
-          <td>
-              <div class="button flex gap-3 items-center justify-center text-xl"> 
-                <button class="edit hover:text-indigo-500 duration-200" ><ion-icon name="create-outline"></ion-icon>
-                </button>
-                <button class="delete hover:text-indigo-500 duration-200" ><ion-icon name="trash-outline"></ion-icon>
-                </button>
-              </div>
-          </td>
-        </tr>
-
-        
       </table>
     </div>
 
