--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
     <!-- Code block starts -->
     <dh-component>
       <div
-        class="py-60 bg-gray-700/80 transition duration-300 ease-in-out z-10 absolute top-0 right-0 bottom-0 left-0"
+        class="py-60 bg-gray-700/70 transition duration-200 ease-in-out z-10 absolute top-0 right-0 bottom-0 left-0"
         id="modal"
       >
         <div role="alert" class="container mx-auto w-11/12 md:w-2/3 max-w-lg">
@@ -78,6 +78,7 @@
               class="mb-5 mt-2 text-gray-600 focus:outline-none focus:border focus:border-indigo-700 font-normal w-full h-10 flex items-center pl-3 text-sm border-gray-300 rounded border"
               placeholder="Type batch name"
             />
+
             <label
               for="name"
               class="text-gray-800 text-sm font-bold leading-tight tracking-normal"
@@ -190,7 +191,7 @@
               </div>
               <div class="flex justify-between items-center py-3 w-full">
                 <a
-                  href="#"
+                  href="./pages/student.html"
                   class="students text-lg font-semibold bg-indigo-50 px-3 border rounded-full border-indigo-500 hover:bg-indigo-200 duration-200"
                   >Students</a
                 >
